Reduced text side, enlarged masthead, and removed hover effect

--- a/_sass/minimal-mistakes/_footer.scss
+++ b/_sass/minimal-mistakes/_footer.scss
@@ -13,7 +13,7 @@
   height: auto;
   /* sticky footer fix end */
   margin-top: 3em;
-  color: mix(#fff, $gray, 25%);
+  color: $gray;
   background-color: $lighter-gray;
   border-top: 1px solid $light-gray;
 
