--- a/_sass/minimal-mistakes/_masthead.scss
+++ b/_sass/minimal-mistakes/_masthead.scss
@@ -14,8 +14,9 @@
     display: flex;
     -webkit-box-pack: justify;
      justify-content: space-between;
-    padding: 1em 1em 1em;
+    padding: 0.5em 1em 0.5em;
     font-family: $sans-serif-narrow;
+    font-size: 32px;
 
     @include breakpoint($x-large) {
       max-width: $x-large;
