--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -58,7 +58,7 @@ $background-color           : #fff !default;
 $code-background-color      : #fafafa !default;
 $code-background-color-dark : $light-gray !default;
 $text-color                 : $dark-gray !default;
-$border-color               : $lighter-gray !default;
+$border-color               : $light-gray !default;
 
 $primary-color              : #7a8288 !default;
 $success-color              : #62c462 !default;
@@ -94,8 +94,8 @@ $xing-color                 : #006567 !default;
 $link-color                 : $info-color !default;
 $link-color-hover           : mix(#000, $link-color, 25%) !default;
 $link-color-visited         : mix(#fff, $link-color, 25%) !default;
-$masthead-link-color        : $primary-color !default;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
+$masthead-link-color        : $text-color !default;
+$masthead-link-color-hover  : $text-color !default;
 
 
 /*
