--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -2,6 +2,7 @@
   <div class="masthead__inner-wrap">
     <div class="masthead__menu">
       <nav id="site-nav" class="greedy-nav">
+	<img src="/assets/images/coqb-logo.svg" style="max-width:150px;margin-right:40px;">
         <a class="site-title" href="{{ '/' | absolute_url }}">{{ site.title }}</a>
       </nav>
     </div>
