--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,12 +34,12 @@
 <meta http-equiv="cleartype" content="on">
 
 <!-- icons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-touch-icon.png?v=2">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png?v=2">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png?v=2">
 <link rel="manifest" href="/assets/icons/manifest.json">
-<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg" color="#5bbad5">
-<link rel="shortcut icon" href="/assets/icons/favicon.ico">
+<link rel="mask-icon" href="/assets/icons/safari-pinned-tab.svg?v=2" color="#5bbad5">
+<link rel="shortcut icon" href="/assets/icons/favicon.ico?v=2">
 <meta name="msapplication-config" content="/assets/icons/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
