Increased spacing under disabled JS and added favicon to root

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -6,6 +6,7 @@
   @include container;
   @include clearfix;
   margin-top: 2em;
+  margin-bottom: 11.9em;
   padding-left: 1em;
   padding-right: 1em;
 
