First update for 2020-2021 season, more to follow

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div class="page__footer-follow"></div>
       
 <div class="page__footer-copyright">
-  Sponsored by the University of Colorado Boulder quiz bowl team
+  Sponsored by the <a href="/cu/">academic quiz bowl team at the University of Colorado Boulder</a>.
   <br />
   This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.
   <br />
